[package]
name = "backend"
version = "0.1.0"
authors = ["Yeshwanth Bommareddy <40725768+yeshwanth32@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "0.5.0"
reqwest = "0.9.3"
json = "0.12.4"
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.5"
